--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,13 @@
 /.bundle
 /coverage
 # Ignore all logfiles and tempfiles.
+
+# Google API ignores
+config/credenziali-Google-Translate-api.json
+/config/local_env.yml
+variables.env
+
+
 /log/*
 /tmp
 /public/uploads/*
@@ -28,6 +35,7 @@
 !/app/assets/builds/.keep
 
 /node_modules
+
 
 
 
