--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,25 @@ version: "3.9"
 
 services:
 
-  postgres:
+  db:
     image: postgres:16.2
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
     ports:
       - '5432:5432'
+    volumes:
+      - ./tmp/db:/var/lib/postgresql/data
+
+  api:
+    build: ./
+    command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
+    ports:
+      - '3000:3000'
+    volumes:
+      - .:/app # add our local code to dockerfile
+    depends_on:
+      - db  # add all dependant container
+
+volumes:
+  voxgroupvolume: # named volume
