--- a/config/database.yml
+++ b/config/database.yml
@@ -18,10 +18,11 @@ default: &default
   username: postgres
   password: postgres
   port: 5432
+  host: db
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  url: <%= ENV['DATABASE_URL'] %>
+  url: postgresql://postgres@localhost:5432/postgres
 
 development:
   <<: *default
@@ -76,7 +77,7 @@ test:
 # URL environment variable explicitly:
 #
 #   production:
-#     url: <%= ENV["MY_APP_DATABASE_URL"] %>
+#     url:
 #
 # Read https://guides.rubyonrails.org/configuring.html#configuring-a-database
 # for a full overview on how database connection configuration can be specified.
