--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,20 +7,22 @@ services:
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: vox_group_development
     ports:
       - '5432:5432'
     volumes:
       - ./tmp/db:/var/lib/postgresql/data
 
   api:
-    build: ./
-    command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
+    build: .
+    #command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
+    #command: "./bin/rails server"
+    command: ./bin/docker-entrypoint.sh
     ports:
       - '3000:3000'
     volumes:
+
       - .:/app # add our local code to dockerfile
     depends_on:
       - db  # add all dependant container
 
-volumes:
-  voxgroupvolume: # named volume
