--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
     build: .
     #command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
     #command: "./bin/rails server"
-    command: ./bin/docker-entrypoint.sh
+    #command: ./bin/docker-entrypoint.sh
     ports:
       - '3000:3000'
     volumes:
