--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,18 +11,37 @@ services:
     ports:
       - '5432:5432'
     volumes:
-      - ./tmp/db:/var/lib/postgresql/data
+      - pgdata:/var/lib/postgresql/data
+    networks:
+      - application-network
+
 
   api:
-    build: .
-    #command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
+    build:
+      context: .
+      dockerfile: Dockerfile
+    command: bash -c "bundle install && rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b 0.0.0.0"
     #command: "./bin/rails server"
     #command: ./bin/docker-entrypoint.sh
     ports:
       - '3000:3000'
     volumes:
-
-      - .:/app # add our local code to dockerfile
+      - .:/app #add local code to image
+      - gem_cache:/usr/local/bundle/gems
+      - node_modules:/app/node_modules
     depends_on:
       - db  # add all dependant container
+    networks:
+      - application-network
 
+
+
+networks:
+  application-network:
+    driver: bridge
+
+volumes:
+  pgdata:
+    driver: local
+  gem_cache:
+  node_modules:
