--- a/config/database.yml
+++ b/config/database.yml
@@ -23,7 +23,7 @@
     # For details on connection pooling, see Rails configuration guide
     # https://guides.rubyonrails.org/configuring.html#database-pooling
     pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-    url: postgresql://postgres@localhost:5432/postgres
+    url: postgresql://postgres@db:5432/postgres
 
   development:
     <<: *default
