--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,8 @@ services:
       - node_modules:/app/node_modules
     depends_on:
       - db  # add all dependant container
+
+    #use networks in order to make containers communicate
     networks:
       - application-network
 
