live coding containers

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,6 +44,11 @@ services:
       - "3001:3001"
     command: bash -c "bundle install && rm -f tmp/pids/server.pid && bundle exec rails s -p 3001 -b 0.0.0.0"
 
+    volumes:
+      - C:\Users\leox-\RubymineProjects\GetArticlesApp:/rails
+
+    restart: always
+
     #use networks in order to make containers communicate
     networks:
       - application-network
