--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,6 @@ services:
     networks:
       - application-network
 
-
   api:
     build:
       context: .
@@ -25,10 +24,13 @@ services:
     #command: ./bin/docker-entrypoint.sh
     ports:
       - '3000:3000'
+    restart: always
+
     volumes:
-      - .:/app #add local code to image
+      - .:/app #add local code to image in real time
       - gem_cache:/usr/local/bundle/gems
       - node_modules:/app/node_modules
+
     depends_on:
       - db  # add all dependant container
 
@@ -47,7 +49,7 @@ services:
     volumes:
       - C:\Users\leox-\RubymineProjects\GetArticlesApp:/rails
 
-    restart: always
+    restart: always #if volume is added for the local project path, makes the image update in real time
 
     #use networks in order to make containers communicate
     networks:
